# akinator-py

./: LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: release.yml  ruff.yml
akinator/: __init__.py  akinator.py  enums.py  exceptions.py  types.py
